[FIX] fix link appearance on mobile

--- a/styling.css
+++ b/styling.css
@@ -107,6 +107,7 @@
 
 .expression a, .reading a, .sentence a {
     color: inherit;
+    text-decoration: none;
 }
 
 .expression a:hover {
@@ -159,7 +160,7 @@
     --total-margin: 0.4em;
 
     --top-margin: calc(var(--standard-top-margin) + var(--font-variation));
-    
+
     margin-top: var(--top-margin);
     margin-bottom: calc(var(--total-margin) - var(--top-margin));
 }
@@ -371,8 +372,7 @@
 }
 
 .audio {
-    display: none;
-    /* flex */
+    display: flex;
     justify-content: center;
 }
 
